			   XPCE ChangeLog
			   ==============

VERSION 6.5.21, distributed with SWI-Prolog 5.5.21
==================================================

* FIXED: Bug#66: filename handling for names holding extended ISO Latin 1
  (128..256) characters.  Jiri Spitz.

* ADDED: Allow (re-)definition of ->_draw_postscript from Prolog.  See
  documentation in `graphical->_draw_postscript'.

* FIXED: handling arrows on class arc.  MPWH.

* FIXED: Bug#62: define class whose name is already used as a type causes
  a crash.  Holger Kanwischer.


VERSION 6.5.20, distributed with SWI-Prolog 5.5.20
==================================================

* FIXED: Flickering pullright when dragging over pullright arrow.
  Jochem Liem.

* FIXED: Open pullright if there is no message on an item and the button
  is released.  Jochem Liem.

* FIXED: Unicode support in Windows metafile filename and comment handling.

* FIXED: Bug#48: Error handling in date->advance.  Dmitry.

* FIXED: Bug#57: menu<-modified.  Holger Kanwischer.

* FIXED: Bug#52: file->backup when using national characters.  Jiri Spitz.


VERSION 6.5.19, distributed with SWI-Prolog 5.5.19
==================================================

* ADDED: Working on XIM support.  Current primitive version deals with
  dead-keys and with wide characters in a portable manner.


VERSION 6.5.18, distributed with SWI-Prolog 5.5.18
==================================================

* FIXED:  (At  least  partly):  use   UTF-8  in  decoding  output  from
  XLookupString() to deal with international keyboard input.  See
  src/x11/xcommon.c for details.

* FIXED: Bug#46: Support unicode in display->{inform,confirm}.  Dmitry.


VERSION 6.5.17, distributed with SWI-Prolog 5.5.17
==================================================

* FIXED: Bug#41: memory allocation error using Prolog terms in XPCE.
  Dmitry.

* FIXED: Bug#40: Wrong calculation of character dimensions on non-fixed
  width Unicode characters.  Dmitry.
